// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with Comic Relief links 1`] = `
.c2 {
  text-decoration: none;
  cursor: pointer;
  display: block;
  position: relative;
  transition: opacity 0.2s;
}

.c2:hover,
.c2:focus {
  opacity: 0.6;
}

.c4 {
  width: 100%;
}

.c0 {
  display: flex;
  flex-wrap: nowrap;
  gap: 0;
  list-style-type: none;
  justify-content: flex-start;
  margin: 0 auto 0 0;
  padding: 0;
  align-items: center;
}

.c1 {
  width: 48px;
  height: auto;
  flex: 0 0 48px;
  margin-right: 1.5rem;
}

.c3 {
  width: auto;
}

@media (min-width: 740px) {
  .c0 {
    justify-content: start;
    margin: 0 auto 0 0;
  }
}

@media (min-width: 740px) {
  .c1 {
    margin-right: 1.5rem;
  }
}

<ul
  className="c0"
  newStyle={false}
>
  <li
    className="c1"
    newStyle={false}
  >
    <a
      className="c2 c3"
      data-test="icon-facebook"
      href="https://www.facebook.com/comicrelief"
      isHeader={false}
      newStyle={false}
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our Facebook page"
    >
      <img
        alt="facebook"
        className="c4"
        invertColor={false}
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
    newStyle={false}
  >
    <a
      className="c2 c3"
      data-test="icon-instagram"
      href="https://www.instagram.com/comicrelief"
      isHeader={false}
      newStyle={false}
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our Instagram account"
    >
      <img
        alt="instagram"
        className="c4"
        invertColor={false}
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
    newStyle={false}
  >
    <a
      className="c2 c3"
      data-test="icon-twitter"
      href="https://twitter.com/comicrelief"
      isHeader={false}
      newStyle={false}
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our Twitter account"
    >
      <img
        alt="twitter"
        className="c4"
        invertColor={false}
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
    newStyle={false}
  >
    <a
      className="c2 c3"
      data-test="icon-youtube"
      href="https://www.youtube.com/channel/UCdF5u0ggeSETozc8fsprjcw"
      isHeader={false}
      newStyle={false}
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our YouTube channel"
    >
      <img
        alt="youtube"
        className="c4"
        invertColor={false}
        src="mock.asset"
      />
    </a>
  </li>
</ul>
`;

exports[`renders correctly with Red Nose Day links and self target 1`] = `
.c2 {
  text-decoration: none;
  cursor: pointer;
  display: block;
  position: relative;
  transition: opacity 0.2s;
}

.c2:hover,
.c2:focus {
  opacity: 0.6;
}

.c4 {
  width: 100%;
}

.c0 {
  display: flex;
  flex-wrap: nowrap;
  gap: 0;
  list-style-type: none;
  justify-content: flex-start;
  margin: 0 auto 0 0;
  padding: 0;
  align-items: center;
}

.c1 {
  width: 48px;
  height: auto;
  flex: 0 0 48px;
  margin-right: 1.5rem;
}

.c3 {
  width: auto;
}

@media (min-width: 740px) {
  .c0 {
    justify-content: start;
    margin: 0 auto 0 0;
  }
}

@media (min-width: 740px) {
  .c1 {
    margin-right: 1.5rem;
  }
}

<ul
  className="c0"
  newStyle={false}
>
  <li
    className="c1"
    newStyle={false}
  >
    <a
      className="c2 c3"
      data-test="icon-facebook"
      href="https://www.facebook.com/rednoseday"
      isHeader={false}
      newStyle={false}
      rel="noopener noreferrer"
      target="_self"
      title="Check out our Facebook page"
    >
      <img
        alt="facebook"
        className="c4"
        invertColor={false}
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
    newStyle={false}
  >
    <a
      className="c2 c3"
      data-test="icon-instagram"
      href="https://www.instagram.com/rednoseday"
      isHeader={false}
      newStyle={false}
      rel="noopener noreferrer"
      target="_self"
      title="Check out our Instagram account"
    >
      <img
        alt="instagram"
        className="c4"
        invertColor={false}
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
    newStyle={false}
  >
    <a
      className="c2 c3"
      data-test="icon-twitter"
      href="https://twitter.com/rednoseday"
      isHeader={false}
      newStyle={false}
      rel="noopener noreferrer"
      target="_self"
      title="Check out our Twitter account"
    >
      <img
        alt="twitter"
        className="c4"
        invertColor={false}
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
    newStyle={false}
  >
    <a
      className="c2 c3"
      data-test="icon-youtube"
      href="https://www.youtube.com/channel/UCdF5u0ggeSETozc8fsprjcw"
      isHeader={false}
      newStyle={false}
      rel="noopener noreferrer"
      target="_self"
      title="Check out our YouTube channel"
    >
      <img
        alt="youtube"
        className="c4"
        invertColor={false}
        src="mock.asset"
      />
    </a>
  </li>
</ul>
`;

exports[`renders correctly with Sport Relief links 1`] = `
.c2 {
  text-decoration: none;
  cursor: pointer;
  display: block;
  position: relative;
  transition: opacity 0.2s;
}

.c2:hover,
.c2:focus {
  opacity: 0.6;
}

.c4 {
  width: 100%;
}

.c0 {
  display: flex;
  flex-wrap: nowrap;
  gap: 0;
  list-style-type: none;
  justify-content: flex-start;
  margin: 0 auto 0 0;
  padding: 0;
  align-items: center;
}

.c1 {
  width: 48px;
  height: auto;
  flex: 0 0 48px;
  margin-right: 1.5rem;
}

.c3 {
  width: auto;
}

@media (min-width: 740px) {
  .c0 {
    justify-content: start;
    margin: 0 auto 0 0;
  }
}

@media (min-width: 740px) {
  .c1 {
    margin-right: 1.5rem;
  }
}

<ul
  className="c0"
  newStyle={false}
>
  <li
    className="c1"
    newStyle={false}
  >
    <a
      className="c2 c3"
      data-test="icon-facebook"
      href="https://www.facebook.com/sportrelief"
      isHeader={false}
      newStyle={false}
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our Facebook page"
    >
      <img
        alt="facebook"
        className="c4"
        invertColor={false}
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
    newStyle={false}
  >
    <a
      className="c2 c3"
      data-test="icon-instagram"
      href="https://www.instagram.com/sportrelief"
      isHeader={false}
      newStyle={false}
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our Instagram account"
    >
      <img
        alt="instagram"
        className="c4"
        invertColor={false}
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
    newStyle={false}
  >
    <a
      className="c2 c3"
      data-test="icon-twitter"
      href="https://twitter.com/sportrelief"
      isHeader={false}
      newStyle={false}
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our Twitter account"
    >
      <img
        alt="twitter"
        className="c4"
        invertColor={false}
        src="mock.asset"
      />
    </a>
  </li>
  <li
    className="c1"
    newStyle={false}
  >
    <a
      className="c2 c3"
      data-test="icon-youtube"
      href="https://www.youtube.com/channel/UCdF5u0ggeSETozc8fsprjcw"
      isHeader={false}
      newStyle={false}
      rel="noopener noreferrer"
      target="_blank"
      title="Check out our YouTube channel"
    >
      <img
        alt="youtube"
        className="c4"
        invertColor={false}
        src="mock.asset"
      />
    </a>
  </li>
</ul>
`;
